--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1382,6 +1382,13 @@ th, .info-icon, .char-select img, .picto-checkbox, input[type="checkbox"] {
   margin-bottom:10px;
   padding:6px;
   box-sizing:border-box;
+  background:#3a3e52;
+  color:#eee;
+  border:1px solid #555;
+}
+.suggest-form textarea{
+  height:150px;
+  resize:vertical;
 }
 .suggest-form button{
   display:block;
